Replace static mercurial permission handling
Replace our own hg permission handling with the default hg permission which is controlled by the `web` config